--- a/views/create.pug
+++ b/views/create.pug
@@ -1,11 +1,11 @@
 extends ./base.pug
 
 block content  
-    form.writeForm(action="#" method="POST")
+    form.writeForm(action="/createBoard" method="POST")
         .writeWrapper
             .writewrapper__quide TITLE
             .writewrapper__content 
-                input(type="text" name="title")
+                input(type="text" name="title" )
 
         .writeWrapper
             .writewrapper__quide AUTHOR
