--- a/views/home.pug
+++ b/views/home.pug
@@ -6,21 +6,20 @@ block content
         .home__center.hc 
 
             .hc__buttonArea
-                form(action="/create" method="GED")
+                form(action="/create" method="GET")
                     input(type="submit" value="Write")
             ul.hc__dataList
                 li 번호
                 li 제목
                 li 작성자
                 li 작성일
-            ul.hc__list
-                li 1
-                li 
-                    form(action="/detail" method="GET")
-                        input(type="hidden" name="id" value="real_db_id")
-                        input(type="submit" value="DUMMY TITLE")
-                li AUTHOR
-                li 2021/05/06
-            
-            
-        .home__right 
+            each data in boardList
+                ul.hc__list
+                    li 1
+                    li 
+                        form(action="/detail" method="GET")
+                            input(type="hidden" name="id" value=data._id)
+                            input(type="submit" value=data.title)
+                    li #{data.author}
+                    li #{data.created}
+        .home__right
