--- a/views/home.pug
+++ b/views/home.pug
@@ -13,7 +13,7 @@ block content
                 li 제목
                 li 작성자
                 li 작성일
-            each data in boardList
+            each data in BoardList
                 ul.hc__list
                     li 1
                     li 
