--- a/views/edit.pug
+++ b/views/edit.pug
@@ -1,23 +1,24 @@
 extends ./base.pug
 
 block content  
-    form.writeForm(action="#" method="POST")
+    form.writeForm(action="/editBoard" method="POST")
         .writeWrapper
             .writewrapper__quide TITLE
             .writewrapper__content 
-                input(type="text" name="title")
+                input(type="text" name="title" value=data.title)
 
         .writeWrapper
             .writewrapper__quide AUTHOR
             .writewrapper__content 
-                input(type="text" name="author")
+                input(type="text" name="author" value=data.author)
 
         .descWrapper
             .descWrapper__quide DESC
             .descWrapper__content
-                textarea(name="desc")
+                textarea(name="desc")=data.description
 
         .buttonArea
+            input(type="hidden" name="id" value=data._id)
             input(type="submit" value="EDIT")
 
     form.listForm(action="/" method="GET")
